--- a/Emotion Recognition Workaround/test.html
+++ b/Emotion Recognition Workaround/test.html
@@ -1,14 +1,15 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+
+  <meta charset="utf-8">
+  <title>JS Bin</title>
 </head>
 <body>
-<div>
-	 <iframe id="player" width="640" height="360" src="https://www.youtube.com/embed/zua0_IXcPFY?enablejsapi=1" frameborder="0" allowfullscreen></iframe>
-
+  <iframe id="player" width="640" height="360" src="https://www.youtube.com/embed/zua0_IXcPFY?enablejsapi=1" frameborder="0" allowfullscreen></iframe>
+  
   <button>click time</button>
-</div>
+<script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
+<script src="test.js"></script>
 </body>
 </html>
